force-app/main/default/objects/ERP_Config__mdt/ERP_Config__mdt.object-meta.xml
<CustomObject>
    <label>ERP Config</label>
    <pluralLabel>ERP Configs</pluralLabel>
</CustomObject>