force-app/main/default/objects/ERP_Config__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>