force-app/main/default/objects/ERP_Config__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <label>Max Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>