force-app/main/default/objects/ERP_Config__mdt/fields/Timeout_ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_ms__c</fullName>
    <label>Timeout ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>